--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 netatalk (2.0.3-9) unstable; urgency=low
 
+  * Update zeroconf patch (found in Gentoo bug#133575):
+    + Enable zeroconf only if srvloc is not enabled.
+    + Use Avahis threaded poll implementation only for Avahi >= 0.6.4,
+      and fallback to handling it internally.
   * Packaging moved to collab-maint Git at Alioth. Update VCS-* hints.
   * Update local cdbs snippets:
     + Major improvements to copyright-check, including new versioned
