--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+netatalk (2.0.3-10) UNRELEASED; urgency=low
+
+  * Update cdbs tweaks:
+    + Strip any non-printable characters in copyright-check.mk.  Update
+      copyright-hints.
+
+ -- Jonas Smedegaard <dr@jones.dk>  Wed, 23 Apr 2008 11:04:57 +0200
+
 netatalk (2.0.3-9) unstable; urgency=low
 
   * Update zeroconf patch (found in Gentoo bug#133575):
