Recent copyright-check.mk updates believed to fix bug#477967).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-netatalk (2.0.3-10) UNRELEASED; urgency=low
+netatalk (2.0.3-10) unstable; urgency=low
 
   * Update cdbs tweaks:
     + Strip any non-printable characters in copyright-check.mk.  Update
-      copyright-hints.
+      copyright-hints.  This (and earlier updates) closes: bug#477967.
   * Bump debhelper compatibility level to 6 (was 4).
   * Semi-auto-update debian/control to apply changes contained in the above:
     DEB_AUTO_UPDATE_DEBIAN_CONTROL=yes fakeroot debian/rules clean
 
- -- Jonas Smedegaard <dr@jones.dk>  Wed, 23 Apr 2008 11:04:57 +0200
+ -- Jonas Smedegaard <dr@jones.dk>  Sun, 27 Apr 2008 13:35:04 +0200
 
 netatalk (2.0.3-9) unstable; urgency=low
 
