--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+netatalk (2.0.3-11) unstable; urgency=low
+
+  * Add patch 001 from upstream CVS to fix LFS test for cross
+    compilation.
+
+ -- Jonas Smedegaard <dr@jones.dk>  sÃ¸n, 29 jun 2008 13:57:28 +0200
+
 netatalk (2.0.3-10) unstable; urgency=low
 
   * Update cdbs tweaks:
