Stop installing README.ids no longer provided upstream.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ netatalk (2.0.4~beta2-1) unstable; urgency=high
   * Mangle upstream tarball beta version.
   * Drop patches 000 and 001 contained upstream now.
   * Unfuzz patches 107, 109, 205 and 212.
+  * Stop installing README.ids no longer provided upstream.
   * Set urgency=high due to security fix.
 
  -- Jonas Smedegaard <dr@jones.dk>  Tue, 06 Jan 2009 19:20:15 +0100
