--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+netatalk (2.0.4~beta2-4.1) unstable; urgency=high
+
+  * Non-maintainer upload by the Security Team.
+  * Fix incomplete upstream patch for CVE-2008-5718 by
+    escaping every problematic character and not only those which
+    enables an attacker to execute arbitrary code
+    (213_CVE-2008-5718.patch; Closes: #510585).
+
+ -- Nico Golde <nion@debian.org>  Thu, 29 Jan 2009 11:32:54 +0100
+
 netatalk (2.0.4~beta2-4) unstable; urgency=high
 
   * Rebuild for unstable branch.
