--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+netatalk (2.0.4~rc2-1) UNRELEASED; urgency=low
+
+  * New upstream prerelease:
+    + Drop timeout
+    + New afpd volume options illegalseq, allow_hosts, denied_hosts,
+      dperm and fperm
+    + Allow line continuation in afpd.conf and AppleVolumes.default
+    + Support CJK encoding in afpd (closes: bug#299742)
+    + Default afpd UAMs: DHX + DHX2 (but Debian still only support DHX2)
+    + Fix afpd resolveid error code for directories from MacOS X
+    + increase the number of cnid_dbd slots to 512 (closes: bug#507538)
+
+ -- Jonas Smedegaard <dr@jones.dk>  Mon, 25 May 2009 02:33:16 +0200
+
 netatalk (2.0.4~beta2-5) unstable; urgency=low
 
   * Build-depend on libdb4.7-dev (not libdb4.2-dev). Recommend
