--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-netatalk (2.0.4~rc2-1) UNRELEASED; urgency=low
+netatalk (2.0.4~rc2-1) unstable; urgency=low
 
   * New upstream prerelease:
     + Drop timeout
@@ -9,8 +9,11 @@ netatalk (2.0.4~rc2-1) UNRELEASED; urgency=low
     + Default afpd UAMs: DHX + DHX2 (but Debian still only support DHX2)
     + Fix afpd resolveid error code for directories from MacOS X
     + increase the number of cnid_dbd slots to 512 (closes: bug#507538)
+  * Rewrite copyright to newer DEP5 draft. Add new unicode files (new
+    author, same licensing).
+  * Suppress DHX2 logins in logcheck file.
 
- -- Jonas Smedegaard <dr@jones.dk>  Mon, 25 May 2009 02:33:16 +0200
+ -- Jonas Smedegaard <dr@jones.dk>  Mon, 25 May 2009 12:30:09 +0200
 
 netatalk (2.0.4~beta2-5) unstable; urgency=low
 
