Imported Upstream version 2.0.5~rc2

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Changes in 2.0.5
+================
+
+* NEW: afpd: Time Machine support with new volume option "tm".
+* FIX: papd: Remove variable expansion for BSD printers. Fixes CVE-2008-5718.
+* FIX: afpd: .AppleDxxx folders were user accessible if option 'usedots'
+       was set 
+* FIX: afpd: vetoed files/dirs where still accessible
+* FIX: afpd: cnid_resolve: don't return '..' as a valid name.
+* FIX: uniconv: -d option wasn't working
+
 Changes in 2.0.4
 ================
 
