--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+netatalk (2.0.5~rc2-1) UNRELEASED; urgency=low
+
+  * New upstream prerelease.
+  * Unfuzz patches, and minimize their headers.
+  * Fix old-style update-rc.d options to match LSB init script hints:
+    stop only in runlevel 1 (let system kill it in runlevels 0 and 6).
+  * Fix rename variable used to mangle version in get-orig-source rule.
+  * Declare binary dependencies (not only build-dependencies) in
+    debian/rules.  Document reasons for each dependency.
+  * Really drop suggesting timeout (claimed but forgotten in
+    2.0.4~rc2-1).
+  * Build-depend on libcrack2-dev (with cracklib-dev only as fallback).
+  * Drop build-depending on avahi-client-dev by default (only when
+    DEB_BUILD_OPTIONS contains zeroconf).
+  * Improve patch 201 to use modern roff2ps in etc2ps, and suggest
+    groff.
+
+ -- Jonas Smedegaard <dr@jones.dk>  Tue, 13 Oct 2009 15:09:17 +0200
+
 netatalk (2.0.4-2) unstable; urgency=low
 
   * Update copyright hints.
