--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-netatalk (2.0.5~rc2-1) UNRELEASED; urgency=low
+netatalk (2.0.5-1) unstable; urgency=low
 
   * New upstream prerelease.
   * Unfuzz patches, and minimize their headers.
@@ -14,8 +14,11 @@ netatalk (2.0.5~rc2-1) UNRELEASED; urgency=low
     DEB_BUILD_OPTIONS contains zeroconf).
   * Improve patch 201 to use modern roff2ps in etc2ps, and suggest
     groff.
+  * Recommend (not suggest) libpam-cracklib, and use default PAM
+    configfile setup.
+  * Bump policy compliance to standards version 3.8.3.
 
- -- Jonas Smedegaard <dr@jones.dk>  Tue, 13 Oct 2009 15:09:17 +0200
+ -- Jonas Smedegaard <dr@jones.dk>  Wed, 25 Nov 2009 18:17:40 +0100
 
 netatalk (2.0.4-2) unstable; urgency=low
 
