--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,10 @@
+netatalk (2.0.5-3) unstable; urgency=low
+
+  * atalkd (i.e. AppleTalk protocol daemon) is now disabled by default.
+    Edit /etc/default/netatalk to enable it.
+
+ -- Jonas Smedegaard <dr@jones.dk>  Sat, 23 Jan 2010 03:31:27 +0100
+
 netatalk (2.0.5-2) unstable; urgency=low
 
   * This version of Netatalk switches to Berkeley DB 4.8.
