--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,13 @@
-netatalk (2.0.5-4) UNRELEASED; urgency=low
+netatalk (2.1-1) unstable; urgency=low
 
+  * New upstream release.
+  * Update patches:
+    + Drop patches 001, 002, 003, 101, 102, 103, 104, 105, 106, 113,
+      206, 210, 214, and disabled patches 291, 292, 293: Merged upstream
+      or no longer applies.
+    + Refresh remaining (enabled) patches 109, 200, 205, 212, 213, with
+      shortening quilt options --no-timestamps --no-index -pab.
+    + Disable patch 109: XFS quota support apparently no longer broken.
   * Use only official CDBS (drop local snippets): All improvements now
     adopted upstream.
   * Use source format 3.0 (quilt), and stop including patchsys-quilt.mk.
@@ -9,10 +17,16 @@ netatalk (2.0.5-4) UNRELEASED; urgency=low
     adopted upstream.
   * Rewrite copyright file using draft DEP5 rev. 135. Adds new owners
     and licenses, and some files lacking proper licensing are revealed.
-  * Refresh patches with quilt options --no-timestamps --no-index -pab.
+  * Install docs README.AppleTalk (not README.platforms, its old name)
+    and README.ids.
+  * Simplify rules file to no longer regenerate autotools: no patches
+    affect upstream-shipped automade files.
+  * Bump standards compliance to standards-version 3.8.4.
+  * Add workaround for upstream braindead double expanded DESTDIR.
   * Tighten build-dependency on cdbs.
+  * Stop build-depending on libtool, automake1.11 or autoconf.
 
- -- Jonas Smedegaard <dr@jones.dk>  Sat, 01 May 2010 07:22:57 +0200
+ -- Jonas Smedegaard <dr@jones.dk>  Sat, 01 May 2010 10:11:00 +0200
 
 netatalk (2.0.5-3) unstable; urgency=medium
 
