--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,29 +1,21 @@
+netatalk (2.1.2-3) unstable; urgency=low
+
+  * From now on, default Berkeley DB (currently version 4.8) is used.
+
+    If after upgrading your volumes appear empty or connections are
+    rejected, then please see /usr/share/doc/netatalk/README.Debian for
+    information on how to update your databases.
+
+    In the future, such upgrades should happen automatically.
+
+ -- Jonas Smedegaard <dr@jones.dk>  Wed, 23 Jun 2010 23:59:59 +0200
+
 netatalk (2.0.5-3) unstable; urgency=low
 
   * atalkd (i.e. AppleTalk protocol daemon) is now disabled by default.
     Edit /etc/default/netatalk to enable it.
 
  -- Jonas Smedegaard <dr@jones.dk>  Sat, 23 Jan 2010 03:31:27 +0100
-
-netatalk (2.0.5-2) unstable; urgency=low
-
-  * This version of Netatalk switches to Berkeley DB 4.8.
-
-    If after upgrading your volumes appear empty or connections are
-    rejected, then please see /usr/share/doc/netatalk/README.Debian for
-    information on how to update your databases.
-
- -- Jonas Smedegaard <dr@jones.dk>  Tue, 01 Dec 2009 00:46:28 +0100
-
-netatalk (2.0.4~beta2-5) unstable; urgency=low
-
-  * This version of Netatalk switches to Berkeley DB 4.7.
-
-    If after upgrading your volumes appear empty or connections are
-    rejected, then please see /usr/share/doc/netatalk/README.Debian for
-    information on how to update your databases.
-
- -- Jonas Smedegaard <dr@jones.dk>  Mon, 02 Mar 2009 05:18:59 +0100
 
 netatalk (2.0.4~beta2-1) unstable; urgency=low
 
