--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+netatalk (2.2.1-2) UNRELEASED; urgency=low
+
+  * Build-depend on libldap2-dev and libacl1-dev, to enable LDAP support
+    and avoid FTBFS.
+    Closes: bug#645290. Thanks to Peter Eisentraut.
+  * Update copyright file:
+    + Bump format to 1.0.
+    + Fix double-indent in Copyright fields as per Policy §5.6.13.
+  * Bump standards-version to 3.9.3.
+  * Update copyright file: Add disclaimer to License paragraph
+    GAP~Makefile.in.
+  * Bump debhelper compat level to 7.
+
+ -- Jonas Smedegaard <dr@jones.dk>  Tue, 20 Mar 2012 22:23:54 +0100
+
 netatalk (2.2.1-1) unstable; urgency=low
 
   * New upstream release.
