--- a/debian/changelog
+++ b/debian/changelog
@@ -1,17 +1,22 @@
-netatalk (2.2.1-2) UNRELEASED; urgency=low
+netatalk (2.2.2-1) unstable; urgency=low
 
+  * New upstream release.
+  * Drop patch cherry-picked upstream: Included in new upstream release.
   * Build-depend on libldap2-dev and libacl1-dev, to enable LDAP support
-    and avoid FTBFS.
-    Closes: bug#645290. Thanks to Peter Eisentraut.
+    and support for extended ACLs (and possibly avoid FTBFS).
+    Closes: bug#645290, #651406. Thanks to Peter Eisentraut and masc.
   * Update copyright file:
     + Bump format to 1.0.
     + Fix double-indent in Copyright fields as per Policy §5.6.13.
+    + Add Files paragraph for ACL code.
   * Bump standards-version to 3.9.3.
   * Update copyright file: Add disclaimer to License paragraph
     GAP~Makefile.in.
   * Bump debhelper compat level to 7.
+  * Add patch 101 to start avahi-daemon (if available) before atalkd.
+    Recommend avahi-daemon.
 
- -- Jonas Smedegaard <dr@jones.dk>  Tue, 20 Mar 2012 22:23:54 +0100
+ -- Jonas Smedegaard <dr@jones.dk>  Tue, 20 Mar 2012 23:37:08 +0100
 
 netatalk (2.2.1-1) unstable; urgency=low
 
