--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+netatalk (3.0.6-2) UNRELEASED; urgency=low
+
+  * Bump standards version
+  * Fix lintian warning regarding debian/copyright
+  * Add patch to source init functions in init.d script
+  * Explicitly disable bundled libevent
+  * Bump DH compat level to 9
+  * Build-depend on libevent-dev
+  * Rename libatalk4 to libatalk7
+
+ -- Adrian Knoth <adi@drcomp.erfurt.thur.de>  Tue, 28 Jan 2014 18:10:18 +0100
+
 netatalk (3.0.6-1) experimental; urgency=low
 
   [ Tony Hoyle ]
