--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+netatalk (3.1.6-0) UNRELEASED; urgency=low
+
+  * Imported Upstream version 3.1.6
+  * Systemd support
+  * Rename libatalk15 to libatalk16
+
+ -- Michele Porelli <Linux571@gmail.com>  Wed, 03 Sep 2014 10:40:28 +0100
+
 netatalk (3.1.3-1) UNRELEASED; urgency=low
 
   * Imported Upstream version 3.1.3
