--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,32 @@
+Changes in 3.1.6
+================
+* FIX: Spotlight: fix for long running queries
+* UPD: afpd: distribute SIGHUP from parent afpd to children and force
+       reload shares
+* FIX: netatalk: refresh Zeroconf registration when receiving SIGHUP
+* NEW: configure option "--with-init-style=debian-systemd" for Debian 8 jessieand later.
+       "--with-init-style=debian" is renamed "--with-init-style=debian-sysv".
+
+Changes in 3.1.5
+================
+* FIX: Spotlight: several important fixes
+
+Changes in 3.1.4
+================
+* FIX: afpd: Hangs in Netatalk which causes it to stop responding to
+       connections, bug #572.
+* NEW: afpd: new option "force xattr with sticky bit = yes|no"
+       (default: no), FR #94
+* UPD: afpd: FCE version 2 with new event types and new config options
+       "fce ignore names" and "fce notify script"
+* UPD: afpd: check for modified included config file, FR #95.
+* UPD: libatalk: logger: remove flood protection and allocate messages
+* UPD: Spotlight: use async Tracker SPARQL API
+* NEW: afpd: new option "case sensitive = yes|no" (default: yes)
+       In spite of being case sensitive as a matter of fact, netatalk
+       3.1.3 and earlier did not notify kCaseSensitive flag to the client.
+       Now, it is notified correctly by default, FR #62.
+
 Changes in 3.1.3
 ================
 * UPD: Spotlight: more SPARQL query optimisations
