--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,14 @@
-netatalk (3.1.3-1) UNRELEASED; urgency=low
+netatalk (3.1.6-1) UNRELEASED; urgency=low
 
-  * Imported Upstream version 3.1.3
+  * Imported Upstream version 3.1.6
   * Bump standards version
   * Fix lintian warning regarding debian/copyright
   * Add patch to source init functions in init.d script
   * Explicitly disable bundled libevent
   * Bump DH compat level to 9
   * Build-depend on libevent-dev
-  * Rename libatalk4 to libatalk15
+  * Rename libatalk4 to libatalk16
+  * Change init system to debian-sysv (for the time being)
 
  -- Adrian Knoth <adi@drcomp.erfurt.thur.de>  Tue, 28 Jan 2014 18:10:18 +0100
 
