--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+netatalk (3.1.8-1~logrotate) experimental; urgency=low
+
+  * Logrotate added
+
+ -- Ilya Rusalowski <ilya.rusalowski@gmail.com>  Sun, 28 Feb 2016 04:22:00 +0300
+
 netatalk (3.1.8-1) UNRELEASED; urgency=low
 
   * Imported Upstream version 3.1.8
