--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-netatalk (3.1.8-1) UNRELEASED; urgency=low
+netatalk (3.1.8-2) UNRELEASED; urgency=low
 
+  [ Adrian Knoth ]
   * Imported Upstream version 3.1.8
   * Bump standards version
   * Fix lintian warning regarding debian/copyright
@@ -10,6 +11,9 @@ netatalk (3.1.8-1) UNRELEASED; urgency=low
   * Rename libatalk4 to libatalk17
   * Change init system to debian-systemd
   * Build-depend on dh-systemd
+
+  [ Ilya Rusalowski ]
+  * Add logrotate
 
  -- Adrian Knoth <adi@drcomp.erfurt.thur.de>  Tue, 28 Jan 2014 18:10:18 +0100
 
