--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,7 @@
-netatalk (3.1.8-2) UNRELEASED; urgency=low
+netatalk (3.1.9-1) UNRELEASED; urgency=low
+
+  [ Daniel Lange ]
+  * Imported upstream version 3.1.9
 
   [ Adrian Knoth ]
   * Imported Upstream version 3.1.8
@@ -15,7 +18,7 @@ netatalk (3.1.8-2) UNRELEASED; urgency=low
   [ Ilya Rusalowski ]
   * Add logrotate
 
- -- Adrian Knoth <adi@drcomp.erfurt.thur.de>  Tue, 28 Jan 2014 18:10:18 +0100
+ -- Daniel Lange <DLange@git.local>  Sun, 07 Aug 2016 13:24:10 +0200
 
 netatalk (3.0.6-1) experimental; urgency=low
 
