--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,14 @@
-netatalk (3.1.9-1) UNRELEASED; urgency=low
+netatalk (3.1.10-1) UNRELEASED; urgency=medium
 
   [ Adrian Knoth ]
-  * Imported Upstream version 3.1.9
+  * Imported Upstream version 3.1.10
   * Bump standards version
   * Fix lintian warning regarding debian/copyright
   * Add patch to source init functions in init.d script
   * Explicitly disable bundled libevent
   * Bump DH compat level to 9
   * Build-depend on libevent-dev
-  * Rename libatalk4 to libatalk17
+  * Rename libatalk4 to libatalk18
   * Change init system to debian-systemd
   * Build-depend on dh-systemd
 
