--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Changes in 3.1.11
+================
+* NEW: Global option "zeroconf name", FR#99
+* NEW: show Zeroconf support by "netatalk -V", FR#100
+* UPD: gentoo: Switch openrc init script to openrc-run, GitHub#77
+* FIX: log message: name of function doese not match, GitHub#78
+* UPD: volume capacity reporting to match Samba behavior, GitHub#83
+* FIX: debian: sysv init status command exits with proper exit code, GitHub#84
+* FIX: dsi_stream_read: len:0, unexpected EOF, GitHub#82
+* UPD: dhx uams: OpenSSL 1.1 support, GitHub#87
+
 Changes in 3.1.10
 ================
 * FIX: cannot build when ldap is not defined, bug #630
